--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI='mongodb+srv://chauhanaarti134:<db_password>@cluster0.nh3go.mongodb.net/'
+MONGO_URI='mongodb+srv://chauhanaarti134:root@cluster0.nh3go.mongodb.net/'
 NODE_ENV=production
 PORT=8000
