--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "homepage": "https://aarti442.github.io/react-inotebook",
   "name": "inotebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "both-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -15,7 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"nodemon backend/index.js\""
+    "both": "concurrently \"npm run start\" \"nodemon backend/index.js\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
